adding main container

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+  
+  <main>
+  
+  </main>
 
   <!-- ======= javaScript ========= -->
   <script src="./js/script.js"></script>
