--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,9 +11,13 @@
 </head>
 
 <body>
-  
+
   <main>
-  
+    <!-- ===== nav bar ======= -->
+    <nav>
+      <button id="Home-btn">Home</button>
+      <button id="History-btn">History</button>
+    </nav>
   </main>
 
   <!-- ======= javaScript ========= -->
