Add Home section

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -18,6 +18,25 @@
       <button id="Home-btn">Home</button>
       <button id="History-btn">History</button>
     </nav>
+
+    <!-- Home section -->
+    <section class="Home">
+      <h1>URL Shortener Tool</h1>
+
+      
+      <input type="text" id="urlInput" placeholder="Enter URL here..">
+      <div class="message">Error</div>
+
+      <button>Shorten URL</button>
+
+      <div class="output" id="outputDiv">
+        <!-- Short URL and share button will appere here -->
+        <p>Short URL:- <a href="" target="_blank">https://lessurl.up.railway.app/url</a></p>
+
+        <button>Share</button>
+      </div>
+    </section>
+    
   </main>
 
   <!-- ======= javaScript ========= -->
