Adding History section

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -23,7 +23,7 @@
     <section class="Home">
       <h1>URL Shortener Tool</h1>
 
-      
+
       <input type="text" id="urlInput" placeholder="Enter URL here..">
       <div class="message">Error</div>
 
@@ -36,7 +36,31 @@
         <button>Share</button>
       </div>
     </section>
-    
+
+    <!-- History section -->
+    <section class="history">
+      <table>
+        <thead>
+          <tr>
+            <th colspan="4">Long URL</th>
+            <th colspan="5">Short URL</th>
+            <th colspan="2">Clicks</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="longURL" colspan="4">
+              <a href="https://google.com">https://google.com</a>
+            </td>
+            <td class="shortURl" colspan="5"> <a
+                href="https://lessurl.up.railway.app/url/dXY-Esc6R">https://lessurl.up.railway.app/url/dXY-Esc6R</a>
+            </td>
+            <td colspan="2">10</td>
+          </tr>
+
+        </tbody>
+      </table>
+    </section>
   </main>
 
   <!-- ======= javaScript ========= -->
