home section medify ==>  Error output message ( message will be empty)

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -25,15 +25,13 @@
 
 
       <input type="text" id="urlInput" placeholder="Enter URL here..">
-      <div class="message">Error</div>
+      <div class="message"></div>
 
       <button id="short-Url-Generator-btn">Shorten URL</button>
 
       <div class="output" id="outputDiv">
         <!-- Short URL and share button will appere here -->
-        <p>Short URL:- <a href="" target="_blank">https://lessurl.up.railway.app/url</a></p>
-
-        <button>Share</button>
+    
       </div>
     </section>
 
@@ -53,7 +51,7 @@
               <a href="https://google.com">https://google.com</a>
             </td>
             <td class="shortURl" colspan="5"> <a
-                href="https://lessurl.up.railway.app/url/dXY-Esc6R">https://lessurl.up.railway.app/url/dXY-Esc6R</a>
+              href="https://lessurl.up.railway.app/url/dXY-Esc6R">https://lessurl.up.railway.app/url/dXY-Esc6R</a>
             </td>
             <td colspan="2">10</td>
           </tr>
