history section - if no data then wiil be display "No data available"

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -31,7 +31,7 @@
 
       <div class="output" id="outputDiv">
         <!-- Short URL and share button will appere here -->
-    
+
       </div>
     </section>
 
@@ -47,13 +47,9 @@
         </thead>
         <tbody>
           <tr>
-            <td class="longURL" colspan="4">
-              <a href="https://google.com">https://google.com</a>
-            </td>
-            <td class="shortURl" colspan="5"> <a
-              href="https://lessurl.up.railway.app/url/dXY-Esc6R">https://lessurl.up.railway.app/url/dXY-Esc6R</a>
-            </td>
-            <td colspan="2">10</td>
+            <!-- if data have then will appere here -->
+
+            <td colspan="11" id="if-No-Data">No data available</td>
           </tr>
 
         </tbody>
